--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: Inter;
+  src: url(./assets/fonts/Inter/static/Inter-Medium.ttf);
+}
+
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+}
 .App {
   height: 100vh;
   width: 100vw;
 }
 
-.navigation-container{
+.navigation-container {
   height: 100vh;
   width: 256px;
   position: absolute;
@@ -12,23 +22,28 @@
   top: 0%;
   bottom: 0%;
   color: #fff;
-  background: #0C1629;
+  background: #0c1629;
 }
 
-.dash-main-container { 
+.dash-main-container {
   width: calc(100vw - 256px);
   position: absolute;
   right: 0%;
-  top:0%;
+  top: 0%;
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
 }
 
-.dash-section{
+.dash-section {
   height: 50%;
-  width:50%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
 
 .section-header {
   text-align: center;
