further styling and cleaning some code

--- a/src/components/search.css
+++ b/src/components/search.css
@@ -2,12 +2,7 @@
   position: relative;
 }
 
-.search-container img {
-    cursor: pointer;
-}
-
 .search-input-container {
-  /* opacity: 0.3; */
   border-radius: 12px;
   display: flex;
   align-items: center;
@@ -16,6 +11,14 @@
 .search-input-container input {
   margin-left: 18px;
   border: none;
+}
+
+.search-input-container input:focus {
+  outline-width: 0px;
+}
+
+.search-container img {
+  cursor: pointer;
 }
 
 .search-suggestions-container {
@@ -29,9 +32,7 @@
 
 .search-suggestions-text {
   width: 133px;
-
   margin-top: 16px;
-
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
@@ -54,7 +55,6 @@
 .search-item-col-block {
   min-width: 40px;
   min-height: 40px;
-
   border-radius: 11.4286px;
 }
 
@@ -63,15 +63,11 @@
   height: 40px;
   top: 0px;
   margin-left: 15px;
-
-  /* menu 14 */
-
   font-family: Inter;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
-
   color: #11142d;
 }
 
