--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .dash-section {
@@ -40,11 +41,27 @@ body {
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   align-items: center;
 }
 
-
 .section-header {
   text-align: center;
+  margin: 72px;
+}
+
+.buttons-container {
+  width: 100%;
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 850px) {
+  .navigation-container {
+    display: none;
+  }
+  .dash-main-container {
+    width: 100vw;
+  }
 }
