--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,18 +1,49 @@
-.button {
-  /* background: #6c5dd3; */
+.button,
+.alt-button {
   border-radius: 16px;
   color: #fff;
   border: none;
-  height: 40px;
-  width: 190px;
-
-
   font-family: Inter;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 20px;
-
   text-align: center;
   color: #ffffff;
+  background: #1b1d21;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.button img,
+.alt-button img {
+  height: 20px;
+  width: 20px;
+  margin: 10px;
+}
+
+.button span {
+  margin: 18px 30px 18px 10px;
+}
+
+.alt-button {
+  background: #fff;
+  position: static;
+  height: 20px;
+  left: 23.02%;
+  right: 0%;
+  top: calc(50% - 20px / 2);
+  font-family: Inter;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 20px;
+  color: #1b1d21;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 8px;
 }
